--- a/DraftRedux.ipynb
+++ b/DraftRedux.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -232,9 +232,9 @@
     "def generate(sess, height, width, inputs, output):\n",
     "    samples = np.zeros((100, height, width, 1), dtype='float32')\n",
     "    # TODO add occlusions\n",
-    "    for i in xrange(self.height):\n",
-    "        for j in xrange(self.width):\n",
-    "            for k in xrange(self.channel):\n",
+    "    for i in xrange(height):\n",
+    "        for j in xrange(width):\n",
+    "            for k in xrange(channel):\n",
     "                next_sample = binarize(predict(sess, samples, inputs, output))\n",
     "                samples[:, i, j, k] = next_sample[:, i, j, k]\n",
     "\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -268,18 +268,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start training\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'ses' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-0db59e356d05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;31m# 3. generate samples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         \u001b[0msamples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m         save_images(samples, height, width, 10, 10, \n\u001b[1;32m     39\u001b[0m             directory=SAMPLE_DIR, prefix=\"epoch_%s\" % epoch)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ses' is not defined"
+      "Start training\n",
+      "Start epoch\n",
+      "Start testing\n",
+      "Start generation\n"
      ]
     }
    ],
@@ -299,6 +291,7 @@
     "    iterator = trange(p.max_epoch, ncols=70, initial=initial_step)\n",
     "\n",
     "    for epoch in iterator:\n",
+    "        print('Start epoch')\n",
     "        # 1. train\n",
     "        total_train_costs = []\n",
     "        for idx in xrange(train_step_per_epoch):\n",
@@ -307,7 +300,7 @@
     "\n",
     "            _, cost = sess.run([optim, loss], feed_dict={ inputs: images })\n",
     "            total_train_costs.append(cost)\n",
-    "\n",
+    "        print('Start testing')\n",
     "        # 2. test\n",
     "        total_test_costs = []\n",
     "        for idx in xrange(test_step_per_epoch):\n",
@@ -320,7 +313,7 @@
     "        avg_train_cost, avg_test_cost = np.mean(total_train_costs), np.mean(total_test_costs)\n",
     "\n",
     "        stat.on_step(avg_train_cost, avg_test_cost)\n",
-    "\n",
+    "        print('Start generation')\n",
     "        # 3. generate samples\n",
     "        samples = generate(sess, height, width, inputs, output)\n",
     "        save_images(samples, height, width, 10, 10, \n",
@@ -333,7 +326,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -341,6 +334,28 @@
     "    samples = generate(sess, height, width, inputs, output)\n",
     "    save_images(samples, height, width, 10, 10, directory=SAMPLE_DIR)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "fname = save_images(samples, height, widht, 10, 10, directory=SAMPLE_DIR)\n",
+    "Image(filename=fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
