--- a/pixelrnn.ipynb
+++ b/pixelrnn.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using TensorFlow to Generate Images with PixelRNNs\n",
+    "Let's start by importing all the necessary dependencies.\n",
+    "\n",
+    "Note that, as mentioned in the article, this notebook will use a faster, simpler version of the PixelRNN architecture called PixelCNN, which just relies on a series of masked convolutions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -23,7 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set the parameters of the network"
+    "### Set up the parameters\n",
+    "Here we set all the paramaters for the PixelRNN model. These include the model hyperparameters, some dataset properties, and debugging information. We also set up the random seeds for Tensorflow and Numpy."
    ]
   },
   {
@@ -82,7 +93,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the dataset\n"
+    "### Prepare the dataset\n",
+    "\n",
+    "Next, let's load the MNIST image data from which we will train our model. [MNIST](http://yann.lecun.com/exdb/mnist/) is a dataset of handwritten digits, commonly used as a benchmark for machine learning tasks. We will try to generate images that look similar to those contained in the dataset.\n"
    ]
   },
   {
@@ -118,7 +131,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up network"
+    "### Setting up network\n",
+    "\n",
+    "Let's construct the PixelCNN model. First, we set up input placeholder. We'll be feeding batches of training images into the model through this.\n",
+    "\n",
+    "Next, we construct the masked convolutional layers. You can find the implementation of this masking procedure in ```ops.py```. These layers apply a series of convolutions to the image, where each filter is masked to only account for pixels in the region of interest. These are the pixels above and to the left of the pixel in the center of the mask, which follows the PixelRNN generative model assumptions. Also of note is that the receptive field of the PixelCNN model grows linearly with the depth of these convolutional stacks.\n",
+    "\n",
+    "After the convolutions, we apply a sigmoid activation to arrive at an estimate for the grayscale intensity for each pixel in the output image."
    ]
   },
   {
@@ -137,20 +156,19 @@
     "    \"\"\"\n",
     "    input_shape = [None, height, width, channel] if params.use_gpu else [None, channel, height, width]\n",
     "    inputs = tf.placeholder(tf.float32, input_shape)\n",
-    "    \n",
-    "    # TODO remove scoping\n",
-    "    # input of main reccurent layers\n",
+    "\n",
+    "    # input of main convolutional layers\n",
     "    scope = \"conv_inputs\"\n",
     "    conv_inputs = conv2d(inputs, params.hidden_dims, [7, 7], \"A\", scope=scope)\n",
     "    \n",
-    "    # main reccurent layers\n",
+    "    # main convolutions layers\n",
     "    last_hid = conv_inputs\n",
     "    for idx in range(params.recurrent_length):\n",
     "        scope = 'CONV%d' % idx\n",
     "        last_hid = conv2d(last_hid, 3, [1, 1], \"B\", scope=scope)\n",
     "        print(\"Building %s\" % scope)\n",
     "\n",
-    "    # output reccurent layers\n",
+    "    # output convolutional layers\n",
     "    for idx in range(params.out_recurrent_length):\n",
     "        scope = 'CONV_OUT%d' % idx\n",
     "        last_hid = tf.nn.relu(conv2d(last_hid, params.out_hidden_dims, [1, 1], \"B\", scope=scope))\n",
@@ -161,6 +179,15 @@
     "    return inputs, output, conv2d_out_logits\n",
     "\n",
     "inputs, output, conv2d_out_logits = pixelRNN(height, width, channel, p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimization\n",
+    "\n",
+    "Now, let's train the model. To do so, we will minimize the cross entropy loss using an RMSPropOptimizer. We also clip the gradients to help deal with potential exploding gradient problems."
    ]
   },
   {
@@ -182,6 +209,14 @@
     " \n",
     "# show_all_variables()\n",
     "print(\"Building %s finished!\" % p.model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image generation\n",
+    "To generate an image, we predict a single pixel at a time. Once we generate a pixel, the next prediction will use the previous pixels to generate the next pixel intensity using the masked convolutions. "
    ]
   },
   {
@@ -211,7 +246,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "### Training\n",
+    "\n",
+    "Now we start the actual training process. We initialize Tensorflow and load a Statistics class to keep track of the model and score statistics as we train.\n",
+    "\n",
+    "Then, we go through our training epochs, generating a series of images, evaluating the loss and optimizing accordingly. Every epoch we also test the model by producing sample images and evaluating the performance on some test data. Finally, once training is finished, we generate the images to display."
    ]
   },
   {
@@ -293,12 +332,30 @@
     "fname = save_images(samples, height, width, 10, 10, directory=SAMPLE_DIR)\n",
     "Image(filename=fname)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we are done, we close our Tensorflow session."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sess.close()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -312,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
