Add occlusions to the notebook

--- a/pixelrnn.ipynb
+++ b/pixelrnn.ipynb
@@ -45,9 +45,9 @@
     "    \"use_dynamic_rnn\" : False, # whether to use dynamic_rnn or not\n",
     "\n",
     "    # training\n",
-    "    \"max_epoch\" : 100000, # # of step in an epoch\n",
-    "    \"test_step\" : 100, # # of step to test a model\n",
-    "    \"save_step\" : 1000, # # of step to save a model\n",
+    "    \"max_epoch\" : 20, # # of step in an epoch\n",
+    "    \"test_step\" : 10, # # of step to test a model\n",
+    "    \"save_step\" : 5, # # of step to save a model\n",
     "    \"learning_rate\" : 1e-3, # learning rate\n",
     "    \"grad_clip\" : 1, # value of gradient to be used for clipping\n",
     "    \"use_gpu\" : True, # whether to use gpu for training\n",
@@ -194,15 +194,22 @@
    "source": [
     "def predict(sess, images, inputs, output):\n",
     "    return sess.run(output, {inputs: images})\n",
+    "def generate_occlusions(sess, height, width, inputs, output):\n",
+    "    samples = occlude(images, height, width)\n",
+    "    starting_position = [0,height//2]\n",
+    "    for i in range(starting_position[1], height):\n",
+    "        for j in range(starting_position[0], width):\n",
+    "            next_sample = binarize(predict(sess, samples, inputs, output))\n",
+    "            samples[:, i, j] = next_sample[:, i, j]\n",
+    "    return samples\n",
     "\n",
     "def generate(sess, height, width, inputs, output):\n",
     "    samples = np.zeros((100, height, width, 1), dtype='float32')\n",
     "\n",
     "    for i in range(height):\n",
     "        for j in range(width):\n",
-    "            for k in range(channel):\n",
-    "                next_sample = binarize(predict(sess, samples, inputs, output))\n",
-    "                samples[:, i, j, k] = next_sample[:, i, j, k]\n",
+    "            next_sample = binarize(predict(sess, samples, inputs, output))\n",
+    "            samples[:, i, j] = next_sample[:, i, j]\n",
     "\n",
     "    return samples"
    ]
@@ -262,10 +269,10 @@
     "    stat.on_step(avg_train_cost, avg_test_cost)\n",
     "    # print('Start generation')\n",
     "    # 3. generate samples\n",
-    "    samples = generate(sess, height, width, inputs, output)\n",
+    "    samples = generate_occlusions(sess, height, width, inputs, output)\n",
     "    path = save_images(samples, height, width, 10, 10, \n",
     "        directory=SAMPLE_DIR, prefix=\"epoch_%s\" % epoch)\n",
-    "    iterator.set_description(\"train l: %.3f, test l: %.3f\" % (avg_train_cost, avg_test_cost))"
+    "    iterator.set_description(\"train loss: %.3f, test loss: %.3f\" % (avg_train_cost, avg_test_cost))"
    ]
   },
   {
@@ -277,7 +284,7 @@
    "outputs": [],
    "source": [
     "# with tf.Session() as sess:\n",
-    "samples = generate(sess, height, width, inputs, output)\n",
+    "samples = generate_occlusions(sess, height, width, inputs, output)\n",
     "save_images(samples, height, width, 10, 10, directory=SAMPLE_DIR)"
    ]
   },
@@ -293,26 +300,35 @@
     "fname = save_images(samples, height, width, 10, 10, directory=SAMPLE_DIR)\n",
     "Image(filename=fname)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
